# langChainLearn

./: 01-模型初步调用.py  02-模型调用方式.ipynb  README.md  pyproject.toml
03-PromptTemplate/: 01-实例化.py  02-部分提示模版.py  03-调用方式.py
04-ChatPromptTemplate/: 01-实例化.py  02-调用方式.py  03-消息占位符.py  04-多模态提示词.py
05-外部加载Prompt/: 01-json&yaml.py  prompt.json  prompt.yaml
06-Output Parsers/: 01-StrOutputParser.py  02-JsonOutputParser.py
07-Structured Outputs/: 01-TypedDict.py  02-Pydantic.py  03-JSON Schema.py
08-Chains/: 01-Runnable与LCEL.py  02-RunnableSequence 可运行序列.py  03-RunnableParallel 可运行并行.py  04-RunnableLambda 可运行.py  05-RunnablePassthrough 可运行透传.py  06-RunnableBranch 可运行分支.py  07-RunnableWithFallbacks 可运行带回退.py
09-Retrieval/: 01-介绍.py  02-文档解析.py  03-文档切片.py  04-文档嵌入.py  05-向量存储.py
10-Agent/: 01-Tools.py  02-绑定工具.py  03-构建Agent.py
